load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_github_grpc_grpc",
    urls = ["https://github.com/grpc/grpc/archive/v1.35.0.tar.gz"],
    sha256 = "27dd2fc5c9809ddcde8eb6fa1fa278a3486566dfc28335fca13eb8df8bd3b958",
    strip_prefix = "grpc-1.35.0",
)

load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")

grpc_deps()

load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")

grpc_extra_deps()

http_archive(
    name = "stout-grpc",
    url = "https://github.com/benh/stout-grpc/archive/0.7.0.tar.gz",
    sha256 = "6ed6acc3928e5517eaf132a06454ed459e5a989ca5fbf5b128ca9b1f966dc1df",
    strip_prefix = "stout-grpc-0.7.0",
)

load("@stout-grpc//bazel:stout_grpc_deps.bzl", "stout_grpc_deps")

stout_grpc_deps()

#http_archive(
#    name = "com_github_cschuet_leveldb",
#    strip_prefix = "leveldb-aa785abf30e043110a6258eeefad25ae4d27f677",
#    sha256 = "b484e7a4777741c82d265d1192985d9e662b2e0a193638253ebb3060ac62890c",
#    urls = [
#        "https://github.com/cschuet/leveldb/archive/aa785abf30e043110a6258eeefad25ae4d27f677.tar.gz",
#    ],
#)
#
#load("@com_github_cschuet_leveldb//:bazel/repositories.bzl", "repositories")
#
#repositories()
#
#load("@com_github_cschuet_snappy//:bazel/repositories.bzl", "repositories")
#
#repositories()
#
#load("@com_github_cschuet_crc32c//:bazel/repositories.bzl", "repositories")
#
#repositories()